--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "duck-shop-bot",
   "version": "1.0.0",
   "type": "commonjs",
+  "description": "Telegram bot + web server for Duck Shop",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "node --watch bot.js"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
